[CCT-2286] merge cct-2286 changes to the main branch